@@ -1,3 +1,12 @@
+2008-09-22	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, configure.ac, console/uart.c, startup/bspstart.c: Use
+	standardized bsp_cleanup() which can optionally print a message, poll
+	for user to press key, and call bsp_reset(). Using this eliminates
+	the various bsp_cleanup() implementations which had their own
+	implementation and variety of string constants.
+	* startup/bspclean.c: Removed.
+
 2008-09-21	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* include/bsp.h: Remove define of BSP_ZERO_WORKSPACE_AUTOMATICALLY.
